--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
   "name": "hangman",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "set NODE_ENV=development&& node --loader ts-node/esm app/server/server.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "set NODE_ENV=production&& node --loader ts-node/esm app/server/server.ts",
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.21.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.3",
+    "next": "14.2.12",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.12"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.16.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.12",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.12"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
