--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "set NODE_ENV=development&& node --loader ts-node/esm app/server/server.ts",
+    "dev": "dotenv -e .env.development -- node --loader ts-node/esm app/server/server.ts",
     "build": "next build",
-    "start": "set NODE_ENV=production&& node --loader ts-node/esm app/server/server.ts",
+    "start": "dotenv -e .env.production -- node --loader ts-node/esm app/server/server.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/validator": "^13.12.2",
     "bcrypt": "^5.1.1",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "next": "14.2.12",
@@ -22,10 +23,12 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.16.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
     "postcss": "^8",
