--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e .env.development -- nodemon --exec \"node --loader ts-node/esm\" app/server/server.ts",
+    "dev": "dotenv -e .env.development -- nodemon --exec \"node --loader ts-node/esm\" app/backend/server.ts",
     "build": "next build",
     "start": "dotenv -e .env.production -- node --loader ts-node/esm app/server/server.ts",
     "lint": "next lint"
@@ -24,6 +24,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/jwt-decode": "^3.1.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.16.5",
     "@types/react": "^18",
@@ -31,6 +32,7 @@
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
+    "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
