--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "dotenv -e .env.development -- nodemon --exec \"node --loader ts-node/esm\" app/backend/server.ts",
     "build": "next build",
-    "start": "dotenv -e .env.production -- node --loader ts-node/esm app/server/server.ts",
-    "lint": "next lint"
+    "start": "dotenv -e .env.production -- node --loader ts-node/esm app/backend/server.ts",
+    "lint": "next lint",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests"
   },
   "dependencies": {
     "@types/validator": "^13.12.2",
@@ -21,21 +22,30 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/jwt-decode": "^3.1.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.16.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/supertest": "^6.0.2",
+    "babel-jest": "^29.7.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.7",
     "postcss": "^8",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
