--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   },
   "dependencies": {
     "@types/validator": "^13.12.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "next": "14.2.12",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
