--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
+    "nanoid": "^5.0.7",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
