--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io": "^4.8.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
