--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/validator": "^13.12.2",
     "bcryptjs": "^2.4.3",
     "dompurify": "^3.1.7",
+    "dotenv-cli": "^7.4.2",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "nanoid": "^5.0.7",
@@ -23,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
@@ -42,18 +45,16 @@
     "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.7",
     "postcss": "^8",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   }
 }
