--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/validator": "^13.12.2",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dompurify": "^3.1.7",
     "dotenv-cli": "^7.4.2",
     "express": "^4.21.0",
@@ -33,6 +34,7 @@
     "@babel/preset-typescript": "^7.25.7",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/dompurify": "^3.0.5",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
